--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,6 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/zcontacts .
       
+      - name: push image
+        run: |
+            docker push ${{ secrets.DOCKER_USERNAME }}/zcontacts
