--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: build image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/zcontacts .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/zcontacts:1.${{ github.run_number }} .
       
       - name: push image
         run: |
-            docker push ${{ secrets.DOCKER_USERNAME }}/zcontacts
+            docker push ${{ secrets.DOCKER_USERNAME }}/zcontacts:1.${{ github.run_number }}
